--- a/portfolio.html
+++ b/portfolio.html
@@ -17,45 +17,49 @@
     <title>WebStudio - Портфолио</title>
   </head>
   <body>
-    <header class="header-page">
-      <div class="header-box container">
+    <header class="section header-page">
+      <div class="container header-box">
         <!-- Навигация по сайту -->
-        <nav>
-          <div class="nav-box">
-            <a href="./" class="logo-link"><span>Web</span>Studio</a>
-            <ul class="nav-list list">
-              <li class="item">
-                <a class="link" href="./">Студия</a>
-              </li>
-              <li class="item">
-                <a class="link active" href="./portfolio.html">Портфолио</a>
-              </li>
-              <li class="item">
-                <a class="link" href="#contact">Контакты</a>
-              </li>
-            </ul>
-          </div>
+        <nav class="nav-box">
+          <a class="link logo-link" href="./"><span>Web</span>Studio</a>
+          <ul class="nav-list list">
+            <li class="item nav-item">
+              <a class="link" href="./"> Студия</a>
+            </li>
+            <li class="item nav-item">
+              <a class="link active" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="item nav-item">
+              <a class="link" href="#contacts">Контакты</a>
+            </li>
+          </ul>
         </nav>
         <!-- список контактов -->
         <ul class="contact-list list">
-          <li class="item">
-            <a class="link" href="mailto:info@devstudio.com"
+          <li class="item contact-item">
+            <a class="link envelope-link" href="mailto:info@devstudio.com"
+              ><svg class="icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="item">
+          <li class="item contact-item">
             <a class="link tel-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+              ><svg class="icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone" />
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
+          <li></li>
         </ul>
       </div>
     </header>
     <main>
-      <section class="section portfolio-box">
+      <section class="section">
         <div class="container">
-          <h1 class="hidden-title">Портфолио</h1>
-          <ul class="filters-list list">
+          <h1 class="title hidden-title">Портфолио</h1>
+          <ul class="list filters-list">
             <li class="btn-item">
               <button class="btn filters-btn active" type="button" autofocus>
                 Все
@@ -74,104 +78,122 @@
               <button class="btn filters-btn" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="project-list list">
-            <li class="project-card">
-              <div class="card-thumb">
-                <img src="./images/proj1.jpg" alt="дизайн сайта" />
-              </div>
-              <div class="project-card-content">
-                <h2 class="title">Технокряк</h2>
-                <p class="text">Веб-сайт</p>
-              </div>
+          <ul class="list card-list project-list">
+            <li class="item project-card">
+              <a class="link project-link" href="#"
+                ><div class="card-thumb">
+                  <img src="./images/proj1.jpg" alt="дизайн сайта" />
+                </div>
+                <div class="project-card-content">
+                  <h2 class="title">Технокряк</h2>
+                  <p class="text">Веб-сайт</p>
+                </div></a
+              >
             </li>
-            <li class="project-card">
-              <div class="card-thumb">
-                <img src="./images/proj2.jpg" alt="дизайн постера" />
-              </div>
-              <div class="project-card-content">
-                <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                <p class="text">Дизайн</p>
-              </div>
+            <li class="item project-card">
+              <a class="link project-link" href="#"
+                ><div class="card-thumb">
+                  <img src="./images/proj2.jpg" alt="дизайн постера" />
+                </div>
+                <div class="project-card-content">
+                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                  <p class="text">Дизайн</p>
+                </div></a
+              >
             </li>
-            <li class="project-card">
-              <div class="card-thumb">
-                <img
-                  src="./images/proj3.jpg"
-                  alt="Приложение для ресторана"
-                  width="370"
-                />
-              </div>
-              <div class="project-card-content">
-                <h2 class="title">Ресторан Seafood</h2>
-                <p class="text">Приложение</p>
-              </div>
+            <li class="item project-card">
+              <a class="link project-link" href="#"
+                ><div class="card-thumb">
+                  <img
+                    src="./images/proj3.jpg"
+                    alt="Приложение для ресторана"
+                    width="370"
+                  />
+                </div>
+                <div class="project-card-content">
+                  <h2 class="title">Ресторан Seafood</h2>
+                  <p class="text">Приложение</p>
+                </div></a
+              >
             </li>
-            <li class="project-card">
-              <div class="card-thumb">
-                <img src="./images/proj4.jpg" alt="наушники" />
-              </div>
-              <div class="project-card-content">
-                <h2 class="title">Проект Prime</h2>
-                <p class="text">Маркетинг</p>
-              </div>
+            <li class="item project-card">
+              <a class="link project-link" href="#"
+                ><div class="card-thumb">
+                  <img src="./images/proj4.jpg" alt="наушники" />
+                </div>
+                <div class="project-card-content">
+                  <h2 class="title">Проект Prime</h2>
+                  <p class="text">Маркетинг</p>
+                </div></a
+              >
             </li>
-            <li class="project-card">
-              <div class="card-thumb">
-                <img
-                  src="./images/proj5.jpg"
-                  alt="две картонные коробки"
-                  width="370"
-                />
-              </div>
-              <div class="project-card-content">
-                <h2 class="title">Проект Boxes</h2>
-                <p class="text">Приложение</p>
-              </div>
+            <li class="item project-card">
+              <a class="link project-link" href="#"
+                ><div class="card-thumb">
+                  <img
+                    src="./images/proj5.jpg"
+                    alt="две картонные коробки"
+                    width="370"
+                  />
+                </div>
+                <div class="project-card-content">
+                  <h2 class="title">Проект Boxes</h2>
+                  <p class="text">Приложение</p>
+                </div></a
+              >
             </li>
-            <li class="project-card">
-              <div class="card-thumb">
-                <img src="./images/proj6.jpg" alt="монитор" />
-              </div>
-              <div class="project-card-content">
-                <h2 class="title">Inspiration has no Borders</h2>
-                <p class="text">Веб-сайт</p>
-              </div>
+            <li class="item project-card">
+              <a class="link project-link" href="#"
+                ><div class="card-thumb">
+                  <img src="./images/proj6.jpg" alt="монитор" />
+                </div>
+                <div class="project-card-content">
+                  <h2 class="title">Inspiration has no Borders</h2>
+                  <p class="text">Веб-сайт</p>
+                </div></a
+              >
             </li>
-            <li class="project-card">
-              <div class="card-thumb">
-                <img src="./images/proj7.jpg" alt="открытый журнал" />
-              </div>
-              <div class="project-card-content">
-                <h2 class="title">Издание Limited Edition</h2>
-                <p class="text">Дизайн</p>
-              </div>
+            <li class="item project-card">
+              <a class="link project-link" href="#"
+                ><div class="card-thumb">
+                  <img src="./images/proj7.jpg" alt="открытый журнал" />
+                </div>
+                <div class="project-card-content">
+                  <h2 class="title">Издание Limited Edition</h2>
+                  <p class="text">Дизайн</p>
+                </div></a
+              >
             </li>
-            <li class="project-card">
-              <div class="card-thumb">
-                <img src="./images/proj8.jpg" alt="бирка" />
-              </div>
-              <div class="project-card-content">
-                <h2 class="title">Проект LAB</h2>
-                <p class="text">Маркетинг</p>
-              </div>
+            <li class="item project-card">
+              <a class="link project-link" href="#"
+                ><div class="card-thumb">
+                  <img src="./images/proj8.jpg" alt="бирка" />
+                </div>
+                <div class="project-card-content">
+                  <h2 class="title">Проект LAB</h2>
+                  <p class="text">Маркетинг</p>
+                </div></a
+              >
             </li>
-            <li class="project-card">
-              <div class="card-thumb">
-                <img src="./images/proj9.jpg" alt="ноутбук" />
-              </div>
-              <div class="project-card-content">
-                <h2 class="title">Growing Business</h2>
-                <p class="text">Приложение</p>
-              </div>
+            <li class="item project-card">
+              <a class="link project-link" href="#"
+                ><div class="card-thumb">
+                  <img src="./images/proj9.jpg" alt="ноутбук" />
+                </div>
+                <div class="project-card-content">
+                  <h2 class="title">Growing Business</h2>
+                  <p class="text">Приложение</p>
+                </div></a
+              >
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer class="section footer-page" id="contact">
+    <footer class="section footer-page">
       <div class="container footer-box">
-        <div class="contacts">
-          <a href="./" class="logo-link"><span>Web</span>Studio</a>
+        <div class="contacts" id="contacts">
+          <a href="./" class="link logo-link"><span>Web</span>Studio</a>
           <!-- список контактов (подвал) -->
           <address>
             <!-- Ссылка на гуглкарту -->
@@ -199,31 +221,31 @@
         </div>
 
         <div class="footer-social">
-          <h3 class="title">Присоединяйтесь</h3>
-          <ul class="list team-social-list">
-            <li>
-              <a class="link social-link" href="#"
+          <p class="text">Присоединяйтесь</p>
+          <ul class="list footer-social-list">
+            <li class="social-list-item">
+              <a class="link social-link footer-social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram" /></svg
               ></a>
             </li>
 
-            <li>
-              <a class="link social-link" href="#"
+            <li class="social-list-item">
+              <a class="link social-link footer-social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter" /></svg
               ></a>
             </li>
 
-            <li>
-              <a class="link social-link" href="#"
+            <li class="social-list-item">
+              <a class="link social-link footer-social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook" /></svg
               ></a>
             </li>
 
-            <li>
-              <a class="link social-link" href="#"
+            <li class="social-list-item">
+              <a class="link social-link footer-social-link" href="#"
                 ><svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin" /></svg
               ></a>
