Исправил замечания ментора

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,11 @@
             <li class="item project-card">
               <a class="link project-link" href="#"
                 ><div class="card-thumb">
-                  <img src="./images/proj1.jpg" alt="дизайн сайта" />
+                  <img
+                    src="./images/proj1.jpg"
+                    alt="дизайн сайта"
+                    width="370"
+                  />
                 </div>
                 <div class="project-card-content">
                   <h2 class="title">Технокряк</h2>
@@ -93,7 +97,11 @@
             <li class="item project-card">
               <a class="link project-link" href="#"
                 ><div class="card-thumb">
-                  <img src="./images/proj2.jpg" alt="дизайн постера" />
+                  <img
+                    src="./images/proj2.jpg"
+                    alt="дизайн постера"
+                    width="370"
+                  />
                 </div>
                 <div class="project-card-content">
                   <h2 class="title">Постер New Orlean vs Golden Star</h2>
@@ -119,7 +127,7 @@
             <li class="item project-card">
               <a class="link project-link" href="#"
                 ><div class="card-thumb">
-                  <img src="./images/proj4.jpg" alt="наушники" />
+                  <img src="./images/proj4.jpg" alt="наушники" width="370" />
                 </div>
                 <div class="project-card-content">
                   <h2 class="title">Проект Prime</h2>
@@ -145,7 +153,7 @@
             <li class="item project-card">
               <a class="link project-link" href="#"
                 ><div class="card-thumb">
-                  <img src="./images/proj6.jpg" alt="монитор" />
+                  <img src="./images/proj6.jpg" alt="монитор" width="370" />
                 </div>
                 <div class="project-card-content">
                   <h2 class="title">Inspiration has no Borders</h2>
@@ -156,7 +164,11 @@
             <li class="item project-card">
               <a class="link project-link" href="#"
                 ><div class="card-thumb">
-                  <img src="./images/proj7.jpg" alt="открытый журнал" />
+                  <img
+                    src="./images/proj7.jpg"
+                    alt="открытый журнал"
+                    width="370"
+                  />
                 </div>
                 <div class="project-card-content">
                   <h2 class="title">Издание Limited Edition</h2>
@@ -167,7 +179,7 @@
             <li class="item project-card">
               <a class="link project-link" href="#"
                 ><div class="card-thumb">
-                  <img src="./images/proj8.jpg" alt="бирка" />
+                  <img src="./images/proj8.jpg" alt="бирка" width="370" />
                 </div>
                 <div class="project-card-content">
                   <h2 class="title">Проект LAB</h2>
@@ -178,7 +190,7 @@
             <li class="item project-card">
               <a class="link project-link" href="#"
                 ><div class="card-thumb">
-                  <img src="./images/proj9.jpg" alt="ноутбук" />
+                  <img src="./images/proj9.jpg" alt="ноутбук" width="370" />
                 </div>
                 <div class="project-card-content">
                   <h2 class="title">Growing Business</h2>
