--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         <div class="container">
           <div class="hero-box">
             <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-            <button class="btn active" type="button">Заказать услугу</button>
+            <button class="btn active order-btn" type="button">
+              Заказать услугу
+            </button>
           </div>
         </div>
       </section>
@@ -143,19 +145,31 @@
           <ul class="list card-list doing-list">
             <li class="item">
               <div class="card-thumb">
-                <img src="./images/box1.jpg" alt="дисплей планшета" />
+                <img
+                  src="./images/box1.jpg"
+                  alt="дисплей планшета"
+                  width="370"
+                />
               </div>
             </li>
 
             <li class="item">
               <div class="card-thumb">
-                <img src="./images/box2.jpg" alt="включенный ноутбук" />
+                <img
+                  src="./images/box2.jpg"
+                  alt="включенный ноутбук"
+                  width="370"
+                />
               </div>
             </li>
 
             <li class="item">
               <div class="card-thumb">
-                <img src="./images/box3.jpg" alt="планшет в руках женщины" />
+                <img
+                  src="./images/box3.jpg"
+                  alt="планшет в руках женщины"
+                  width="370"
+                />
               </div>
             </li>
           </ul>
@@ -174,6 +188,7 @@
                 <img
                   src="./images/img1.jpg"
                   alt="мужчина, шатен, с бородой в коричневой рубашке, смеется, в очках."
+                  width="270"
                 />
               </div>
 
@@ -218,6 +233,7 @@
                 <img
                   src="./images/img2.jpg"
                   alt="женщина, блондинка, в деловом костюме, руки скрестила на груди, улыбается, в очках."
+                  width="270"
                 />
               </div>
 
@@ -262,6 +278,7 @@
                 <img
                   src="./images/img3.jpg"
                   alt="мужчина, темно-русый, в светлой рубашке, руки скрестил на гругди, с легкой бородкой, улыбается"
+                  width="270"
                 />
               </div>
 
@@ -306,6 +323,7 @@
                 <img
                   src="./images/img4.jpg"
                   alt="мужчина, брюнет, с бородой, в черной футболке, в очках, руки скрестил на груди, слегка улыбается."
+                  width="270"
                 />
               </div>
 
@@ -354,48 +372,48 @@
           <ul class="list card-list">
             <li class="item client-item">
               <a class="link client-link" href="#">
-                <svg class="icon-client" width="106" height="60">
-                  <use href="./images/icons.svg#icon-group1"></use>
+                <svg class="icon-client" width="41" height="46.7">
+                  <use href="./images/icons.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
 
             <li class="item client-item">
               <a class="link client-link" href="#">
-                <svg class="icon-client" width="106" height="60">
-                  <use href="./images/icons.svg#icon-group2"></use>
+                <svg class="icon-client" width="40" height="52">
+                  <use href="./images/icons.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
 
             <li class="item client-item">
               <a class="link client-link" href="#">
-                <svg class="icon-client" width="106" height="60">
-                  <use href="./images/icons.svg#icon-group3"></use>
+                <svg class="icon-client" width="43.46" height="41.18">
+                  <use href="./images/icons.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
 
             <li class="item client-item">
               <a class="link client-link" href="#">
-                <svg class="icon-client" width="106" height="60">
-                  <use href="./images/icons.svg#icon-group4"></use>
+                <svg class="icon-client" width="84.44" height="40.62">
+                  <use href="./images/icons.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
 
             <li class="item client-item">
               <a class="link client-link" href="#">
-                <svg class="icon-client" width="106" height="60">
-                  <use href="./images/icons.svg#icon-group5"></use>
+                <svg class="icon-client" width="62.54" height="45.43">
+                  <use href="./images/icons.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
 
             <li class="item client-item">
               <a class="link client-link" href="#">
-                <svg class="icon-client" width="106" height="60">
-                  <use href="./images/icons.svg#icon-group6"></use>
+                <svg class="icon-client" width="93.79" height="43.93">
+                  <use href="./images/icons.svg#icon-client6"></use>
                 </svg>
               </a>
             </li>
